--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
             <version>3.8.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.25</version>
+            <scope>runtime</scope>
+        </dependency>
 
     </dependencies>
 
