RoleController and endpoints to read added and schema updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,12 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+---
 
 spring.profile: local
 spring.datasource.username: sa
 spring.datasource.password: 123
-spring.datasource.url: jdbc:h2:mem:library;MODE=MySQL;
+spring.datasource.url: jdbc:h2:mem:libreria;MODE=MySQL
 spring.datasource.driverClassName: org.h2.Driver
 spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled: true
